--- a/wan/src/main/AndroidManifest.xml
+++ b/wan/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
     <application
         android:name=".base.app.WanApp"
         android:allowBackup="true"
@@ -14,10 +16,10 @@
         android:theme="@style/WanAppTheme">
 
         <activity
-            android:name=".module.main.act.WanMainActivity"
+            android:name=".module.main.act.WanSplashActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            >
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,13 +27,13 @@
         </activity>
 
         <activity
-            android:name=".module.main.act.WanSplashActivity"
+            android:name=".module.main.act.WanMainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             />
 
         <activity
-            android:name=".search.act.WanSearchActivity"
+            android:name=".module.search.act.WanSearchActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
 
@@ -39,6 +41,17 @@
             android:name=".module.mine.act.RankActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
+
+
+        <activity android:name=".module.login.act.LoginActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            />
+
+        <activity android:name=".module.main.act.WanWebActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
