--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ ext {
     isStructureApplication = false
     isDoudouApplication = false
     isDongnaoApplication = true
-    isWanApplication = false
+    isWanApplication = true
     isMapApplication = false
     isMusicApplication = false
     isWeiboApplication = true
@@ -22,6 +22,7 @@ ext {
             sourceCompatibility: JavaVersion.VERSION_1_8,
             targetCompatibility: JavaVersion.VERSION_1_8,
     ]
+
 
     version = [
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
@@ -86,9 +87,6 @@ ext {
     ]
 
 
-    compileOptions = [
-            sourceCompatibility: JavaVersion.VERSION_1_8,
-            targetCompatibility: JavaVersion.VERSION_1_8,
-    ]
+
 
 }
