--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'org.aspectj:aspectjtools:1.9.4'
+        classpath 'com.antfortune.freeline:gradle:0.8.6'
     }
 }
 
@@ -21,6 +22,8 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+
+    //    http://jcenter.bintray.com/com/antfortune/freeline/gradle/maven-metadata.xml
     }
 }
 
