--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,7 +269,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
             <!-- 上拉刷新 下拉加载更多-->
-        <activity android:name=".ui.rv.freshloadmore.act.RvFreshAndLoadMoreActivity"
+        <activity android:name=".ui.rv.freshloadmore.act.RvLoadMoreActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             />
