--- a/wan/build.gradle
+++ b/wan/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     implementation 'net.soulwolf.widget:ratiolayout:1.0.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    implementation  'com.github.goweii:RxHttp:2.2.9'
+    implementation 'com.github.goweii:RxHttp:2.2.9'
+    implementation 'com.github.goweii:SwipeBack:1.1.0'
 
     implementation project(':library')
     implementation project(':network')
