--- a/wan/src/main/AndroidManifest.xml
+++ b/wan/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
         android:theme="@style/WanAppTheme">
 
         <activity
-            android:name=".module.main.act.WanSplashActivity"
-            android:screenOrientation="portrait"
-           >
+            android:name=".module.main.act.WanMainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -26,32 +25,39 @@
         </activity>
 
         <activity
-            android:name=".module.main.act.WanMainActivity"
-            android:screenOrientation="portrait"
-            />
+            android:name=".module.login.act.LoginActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".module.search.act.WanSearchActivity"
             android:screenOrientation="portrait"/>
 
-
-
-        <activity android:name=".module.login.act.LoginActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".module.main.act.WanSplashActivity"
+            android:screenOrientation="portrait" />
 
         <activity android:name=".module.main.act.WanWebActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
 
-
+        <!-- 积分榜-->
         <activity
             android:name=".module.mine.act.RankActivity"
+            android:screenOrientation="portrait"/>
+
+        <!-- 我的积分-->
+        <activity
+            android:name=".module.mine.act.MyCoinActivity"
             android:screenOrientation="portrait"/>
 
         <activity
             android:name=".module.mine.act.SettingActivity"
             android:screenOrientation="portrait"/>
+
+        <!-- 关于我-->
+        <activity
+            android:name=".module.mine.act.AboutMeActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
