--- a/config.gradle
+++ b/config.gradle
@@ -35,6 +35,7 @@ ext {
             butterknifeVersion              : "8.5.1",
             eventbus                        : "3.1.1",
 
+            bravh                           : "2.9.46",
 
             actionBarEx                     : "3.2.1",
             materialProgressBar             : "1.4.2",
@@ -67,6 +68,9 @@ ext {
             //gson
             gson                            : "com.google.code.gson:gson:$version.gson",
             eventbus                        : "org.greenrobot:eventbus:$version.eventbus",
+
+
+            bravh                           : "com.github.CymChad:BaseRecyclerViewAdapterHelper:$version.bravh",
 
 
             butterknife                     : "com.jakewharton:butterknife:$version.butterknifeVersion",
