--- a/basic_core/build.gradle
+++ b/basic_core/build.gradle
@@ -37,4 +37,6 @@ dependencies {
 //    implementation 'com.github.joephone:jIoC:1.0.2'
     implementation 'com.android.support:palette-v7:28.0.0'
 
+    implementation 'com.github.goweii:SwipeBack:1.1.0'
+
 }
