--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -66,4 +67,6 @@ fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
 *.xml___jb_tmp___
+*.xml
+*.xml
 *.xml
