--- a/basic_core/build.gradle
+++ b/basic_core/build.gradle
@@ -23,9 +23,13 @@ dependencies {
     api config.dependencies.eventbus
 
     //友盟分析
-    api rootProject.ext.dependencies.umeng
+    api config.dependencies.umeng
 
-    api rootProject.ext.dependencies.butterknife
+    api config.dependencies.butterknife
+    api config.dependencies.swipeBack
+
+    debugApi config.dependencies.debugImplementation
+    releaseApi config.dependencies.releaseImplementation
 
 
 
@@ -37,6 +41,6 @@ dependencies {
 //    implementation 'com.github.joephone:jIoC:1.0.2'
     implementation 'com.android.support:palette-v7:28.0.0'
 
-    implementation 'com.github.goweii:SwipeBack:1.1.0'
+
 
 }
