--- a/wan/src/main/AndroidManifest.xml
+++ b/wan/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
             android:name=".module.main.act.WanMainActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".module.main.act.WanWebActivity" />
+        <activity android:name=".module.main.act.WanWebActivity"
+            />
         <!-- 积分榜-->
         <activity android:name=".module.mine.act.RankActivity"/>
         <!-- 我的积分-->
