--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':app', ':basic_core', ':structure', ':basic_utils', ':animation', ':ima
 include ':security'
 include ':security'
 include ':security'
+include ':guard'
