--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     //注解器
     annotationProcessor config.dependencies["router-compiler"]
 
-
+    implementation "me.leolin:ShortcutBadger:1.1.13@aar"
 }
