--- a/wan/src/main/AndroidManifest.xml
+++ b/wan/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".core.app.WanApp"
         android:allowBackup="true"
@@ -20,13 +22,16 @@
         android:theme="@style/WanAppTheme">
 <!--        //ZoomHeaderActivity WanSplashActivity-->
         <activity
-            android:name=".module.main.act.WanSplashActivity"
+            android:name=".module.mine.act.RvActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".module.main.act.WanSplashActivity"/>
 
         <activity android:name=".module.mine.act.ImageActivity"/>
 
