--- a/basic_utils/build.gradle
+++ b/basic_utils/build.gradle
@@ -6,4 +6,6 @@ def config = rootProject.ext
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api config.dependencies.supportv4
+
+    implementation 'jp.wasabeef:glide-transformations:2.0.2'
 }
