--- a/config.gradle
+++ b/config.gradle
@@ -11,10 +11,10 @@ ext {
     isWeChatApplication = true
 
     android = [
-            compileSdkVersion       : 28,
-            buildToolsVersion       : "28.0.3",
+            compileSdkVersion       : 30,
+            buildToolsVersion       : "30.0.3",
             minSdkVersion           : 22,
-            targetSdkVersion        : 28,
+            targetSdkVersion        : 30,
             versionCode             : 1,   //版本更新了几次，第一版应用是1，以后每更新一次加1
             versionName             : "1.1.0",
     ]
@@ -28,7 +28,7 @@ ext {
     version = [
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
             constraintLayout                : "1.1.3",
-            glideSdkVersion                 : "3.7.0",   //4.8.0   3.7.0  4.11.0
+            glideSdkVersion                 : "3.7.0",   //3.7.0 4.8.0   3.7.0  4.11.0
 
             //工具
             gson                            : "2.5",
@@ -40,9 +40,9 @@ ext {
             actionBarEx                     : "3.2.1",
             materialProgressBar             : "1.4.2",
             swipeBack                       : "1.1.0",
-            smartRefreshLayout              : "1.1.0",
-            anyDialog                       : "3.0.3",
-            anyLayer                        : "3.0.0",
+            smartRefreshLayout              : "2.0.3",    // 1.1.0
+//            anyDialog                       : "3.0.3",
+//            anyLayer                        : "3.0.0",
 
             router                          : "1.4.1",
             routerCompiler                  : "1.2.2",
@@ -79,7 +79,10 @@ ext {
 
             bravh                           : "com.github.CymChad:BaseRecyclerViewAdapterHelper:$version.bravh",
             swipeBack                       : "com.github.goweii:SwipeBack:$version.swipeBack",
-            smartRefreshLayout              : "com.scwang.smartrefresh:SmartRefreshLayout:$version.smartRefreshLayout",
+
+
+            smartRefreshLayoutLayoutKernel              : "com.scwang.smart:refresh-layout-kernel:$version.smartRefreshLayout",
+            smartRefreshLayoutHeaderMaterial            : "com.scwang.smart:refresh-header-material:$version.smartRefreshLayout",
 
 
             butterknife                     : "com.jakewharton:butterknife:$version.butterknifeVersion",
@@ -87,8 +90,8 @@ ext {
 
             actionBarEx                     : "com.github.goweii:ActionBarEx:$version.actionBarEx",
             materialProgressBar             : "me.zhanghai.android.materialprogressbar:library:$version.materialProgressBar",
-            anyLayer                        : "com.github.goweii:AnyLayer:$version.anyLayer",
-            anyDialog                       : "com.github.goweii:AnyDialog:$version.anyDialog",
+//            anyLayer                        : "com.github.goweii:AnyLayer:$version.anyLayer",
+//            anyDialog                       : "com.github.goweii:AnyDialog:$version.anyDialog",
 
 
             //http
