--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation "me.leolin:ShortcutBadger:1.1.13@aar"
     //dingding head
     implementation 'in.srain.cube:ultra-ptr:1.0.11'
+
+    implementation 'com.github.Duckdan:FileSelectDemo:v1.0'
 }
