--- a/basic_core/build.gradle
+++ b/basic_core/build.gradle
@@ -48,7 +48,16 @@ dependencies {
     implementation project(':basic_ui')
     implementation project(':basic_res')
     implementation project(':basic_utils')
-    implementation project(path: ':permissions')
+    implementation project(':permissions')
+
+
+    implementation files('libs/SocialSDK_QQ_Simplify.jar')
+    implementation files('libs/SocialSDK_Sina_Simplify.jar')
+    implementation files('libs/SocialSDK_WeChat_Simplify.jar')
+    implementation files('libs/umeng_social_api.jar')
+    implementation files('libs/umeng_social_net.jar')
+    implementation files('libs/umeng_social_shareview.jar')
+    implementation files('libs/umeng_social_tool.jar')
 
 
 }
