--- a/basic_core/src/main/AndroidManifest.xml
+++ b/basic_core/src/main/AndroidManifest.xml
@@ -2,18 +2,66 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.transcendence.core">
 
-    <meta-data
-        android:name="UMENG_APPKEY"
-        android:value="5ab31ca8a40fa350d6000dff" />
-    <meta-data
-        android:name="UMENG_CHANNEL"
-        android:value="umeng" />
+<!--    <meta-data-->
+<!--        android:name="UMENG_APPKEY"-->
+<!--        android:value="5ab31ca8a40fa350d6000dff" />-->
+<!--    <meta-data-->
+<!--        android:name="UMENG_CHANNEL"-->
+<!--        android:value="umeng" />-->
 
     <application>
         <activity
             android:name="com.mzelzoghbi.zgallery.activities.ZGalleryActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
+
+        <!--微信-->
+        <activity
+            android:name=".umeng.wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <!--新浪微博-->
+        <activity
+            android:name=".umeng.WBShareActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <!--qq精简版-->
+        <activity
+            android:name="com.umeng.qq.tencent.AuthActivity"
+            android:launchMode="singleTask"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <!--这里的scheme是qq分享要用的，100424468为自己申请的appid，真实项目中需要替换-->
+                <data android:scheme="tencent100424468"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.umeng.qq.tencent.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <!--分享编辑页-->
+        <activity
+            android:name="com.umeng.socialize.editorpage.ShareActivity"
+            android:excludeFromRecents="true"
+            />
+
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="561cae6ae0f55abd990035bf">
+        </meta-data>
 
     </application>
 
